Fixed some broken css in work page

--- a/src/assets/css/modules/_components/_hero.scss
+++ b/src/assets/css/modules/_components/_hero.scss
@@ -184,6 +184,13 @@ video.hero__background {
 }
 
 // Custom heros
+
+.hero--work {
+  h1 {
+    margin: 0;
+  }
+}
+
 .hero--about {
 
     h1 {
