--- a/src/assets/css/modules/_components/_sidescroll.scss
+++ b/src/assets/css/modules/_components/_sidescroll.scss
@@ -1,4 +1,5 @@
 .sidescroll {
+  overflow: hidden;
     @media (min-width: 768px) {
         display: flex;
         background-color: #fff;
